--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    
 	<title>MappedIn</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<meta http-equiv="refresh" content=";URL=/secondpage.html">
+	<meta http-equiv="refresh" content="5;URL=/secondpage.html">
 	<link rel="stylesheet" type="text/css" href="css/mainpagecss.css">
     
 
