--- a/index.html
+++ b/index.html
@@ -1,29 +1,70 @@
 <html>
   <head>
    
-	<title>MappedIn</title>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<meta http-equiv="refresh" content="5;URL=/secondpage.html">
-	<link rel="stylesheet" type="text/css" href="css/mainpagecss.css">
+   <title>MappedIn</title>
+   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<META HTTP-EQUIV="refresh" content="10;URL=/aftersignpage.html">
+<script type="text/javascript" src="https://www.linkedin.com/uas/oauth2/authorization?response_type=code
+                                        &client_id=77naykdvirz5qn
+                               &scope=r_fullprofile%20r_emailaddress%20r_network.
+&state=AnDeRsOnCaHeTNcIrL2014
+                                           &redirect_uri=http://linkemap.bl.ee/aftersignpage.html">
     
 
-	<script type="text/javascript" src="http://platform.linkedin.com/in.js">
-		api_key: 77naykdvirz5qn
-		authorize: true
-		credentials_cookie: true
-		credentials_cookie_crc: true
-                scope=r_basicprofile%20r_emailaddress
-		onLoad: onLinkedInLoad
-	</script> 
+<script type="text/javascript" src="http://platform.linkedin.com/in.js">
+api_key: 77nu09benahvpm
+authorize: false
+  credentials_cookie: true
+  credentials_cookie_crc: true
+  onLoad: onLinkedInLoad
+</script> 
+<script type="text/javascript">
 
+function onLinkedInLoad() {
+  IN.Event.on(IN, "auth", function() {onLinkedInLogin();});
 
+}
+
+function onLinkedInLogout() {
+  setLoginBadge(false);
+}
+
+function onLinkedInLogin() {
+  // we pass field selectors as a single parameter (array of strings)
+  IN.API.Profile("me")
+    .fields(["id", "firstName", "lastName", "pictureUrl", "publicProfileUrl"])
+    .result(function(result) {
+      setLoginBadge(result.values[0]);
+    })
+    .error(function(err) {
+      alert(err);
+    });
+}
+
+function setLoginBadge(profile) {
+  if (!profile) {
+    profHTML = "<p>You are not logged in</p>";
+  }
+  else {
+    var pictureUrl = profile.pictureUrl || "http://static02.linkedin.com/scds/common/u/img/icon/icon_no_photo_80x80.png";
+    profHTML = "<p><a href=\"" + profile.publicProfileUrl + "\">";
+    profHTML = profHTML + "<img align=\"baseline\" src=\"" + pictureUrl + "\"></a>";      
+    profHTML = profHTML + "&nbsp; Welcome <a href=\"" + profile.publicProfileUrl + "\">";
+    profHTML = profHTML + profile.firstName + " " + profile.lastName + "</a>! <a href=\"#\" onclick=\"IN.User.logout(); return false;\">logout</a></p>";
+  }
+  document.getElementById("loginbadge").innerHTML = profHTML;
+}
+</script>
   </head>
-	<body>
-	<p><h1>Welcome to MappedIn</h1></p>
+ <body>
+<p><h1>Welcome to MappedIn</h1></p>
   
-  <script type="IN/Login" data-label="Sign in with LinkedIn">Hello, <?js= firstName ?> <?js= lastName ?>                               </script>
-   
-<div id="loginbadge"></div>
+ <div id="loginbadge">
+  <p>Login badge renders here if the current user is authorized.</p>
+</div>
+ <script type="IN/Login" data-onAuth="loadData"></script>
+     
+ </script>
 
 </body>
 
